# aerial_waypoint_manager

./: .gitignore  README.md  install_mavros.sh  requirements.txt
waypoint_planner/: README.md  package.xml  setup.py
waypoint_planner/config/: waypoint_planner.yaml
waypoint_planner/launch/: mavros.launch.py  waypoint_gui.launch.py  waypoint_planner.launch.py
waypoint_planner/scripts/: extract_image_data.py  waypoint_graph.py
waypoint_planner/waypoint_planner/: __init__.py  pix_gps_map.py  request_example.py  waypoint_gui.py  waypoint_planner_node.py
waypoint_sampler/: extract_image_data.py  pix_gps_map.py  waypoint_sampler.py
