<?xml version="1.0"?>
<package format="3">
  <name>waypoint_planner</name>
  <version>0.0.0</version>
  <description>Waypoint planning interface for PX4-based UAVs using MAVROS</description>
  <maintainer email="dexterong94@gmail.com">Dexter Ong</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <build_depend>ament_python</build_depend>
  <build_depend>rclpy</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geographic_msgs</exec_depend>

  <depend>networkx</depend>
  <depend>scipy</depend>
  <depend>pyproj</depend>
  <depend>shapely</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>